--- a/yvn/slotapp/static/slot.html
+++ b/yvn/slotapp/static/slot.html
@@ -1,33 +1,3 @@
-# Ex02 Time Table
-## Date:27-11-2025
-
-## AIM
-To write a html webpage page to display your slot timetable.
-
-## ALGORITHM
-### STEP 1
-Create a Django-admin Interface.
-
-### STEP 2
-Create an App inside the Django project.
-
-### STEP 2
-Create a static folder uder the created App and insert HTML code.
-
-### STEP 3
-Create a simple table using ```<table>``` tag in html with the relevant attributes.
-
-### STEP 4
-Add rows using ```<tr>``` tag.
-
-### STEP 5
-Add your course schedule using ```<td>``` tag.
-
-### STEP 6
-Execute the program using runserver command.
-
-## PROGRAM
-```
 <<html>
     <head>
         <title>slot Timetable</title>
@@ -118,11 +88,4 @@ Execute the program using runserver command.
             </tr>
             </table>
         </body>
-```
-
-
-## OUTPUT
-![alt text](<Screenshot 2025-11-27 201117.jpg>)
-
-## RESULT
-The program for creating slot timetable using basic HTML tags is executed successfully.
+</html>
