--- a/yvn/slotapp/static/slot.html
+++ b/yvn/slotapp/static/slot.html
@@ -22,8 +22,7 @@
             <td bgcolor="cyan">8-10</td>
             <td>Free slot</td>
             <td>C PROG</td>
-            <td>Free slot</td>
-            <td>Free slot</td>
+            <td colspan="2" align="center">Free slot</td>
             <td>WEB</td>
             <td>PS</td>
         </tr>
@@ -33,8 +32,7 @@
             <td>Free slot</td>
             <td>PS</td>
             <td>Free slot</td>
-            <td>WEB</td>
-            <td>WEB</td>
+            <td colspan="2" align="center">WEB</td>
         </tr>
         <tr  align="center">
             <td bgcolor="cyan">12-1</td>
@@ -42,8 +40,7 @@
         </tr>
         <tr align="center">
             <td bgcolor="cyan">1-3</td>
-            <td>WEB</td>
-            <td>WEB</td>
+            <td colspan="2" align="center">WEB</td>
             <td>MM</td>
             <td>PS</td>
             <td>Free slot</td>
@@ -52,11 +49,8 @@
         <tr align="center">
             <td bgcolor="cyan">3-5</td>
             <td>Free slot</td>
-            <td>C PROG</td>
-            <td>C PROG</td>
-            <td>C PROG</td>
-            <td>Free slot</td>
-            <td>Free slot</td> 
+            <td colspan="3" align="center">C PROG</td>
+            <td colspan="2" align="center">Free slot</td> 
         </tr>
         </table>
         <br>
